--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <title>ON SIGHT｜沖縄中部 出張洗車サービス</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body {
+    body {<nav class="nav">
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#service">Service</a></li>
+    <li><a href="#price">Price</a></li>
+    <li><a href="#reservation">Reservation</a></li>
+    <li><a href="#business">法人向け</a></li>
+  </ul>
+</nav>
+
       font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
       margin: 0;
       color: #333;
@@ -101,4 +110,5 @@
 
 </body>
 </html>
+
 
