--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
   <title>ON SIGHT｜沖縄中部 出張洗車サービス</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    .nav {
+  background: #ffffff;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  border-bottom: 1px solid #ddd;
+}
+
+.nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 10px 0;
+}
+
+.nav li {
+  margin: 0 15px;
+}
+
+.nav a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+
+.nav a:hover {
+  color: #0da9a7;
+}
+
     body {<nav class="nav">
   <ul>
     <li><a href="#home">Home</a></li>
@@ -107,8 +137,30 @@
 <footer>
   <p>© 2026 ON SIGHT</p>
 </footer>
+<header id="home">
+<section id="service">
+<section id="price">
+<section id="reservation">
+  <h2>ご予約・お問い合わせ</h2>
+  <p>
+    ご予約・お問い合わせは下記よりお願いいたします。
+  </p>
+  <a href="tel:090-0000-0000" class="btn">電話で予約</a><br><br>
+  <a href="#" class="btn">LINEで予約</a>
+</section>
+on">
 
+  <section id="business">
+  <h2>法人向けサービス</h2>
+  <p>
+    法人様・店舗様向けに、社用車・営業車の定期洗車も承っております。<br>
+    台数・頻度に応じたお見積もりが可能です。
+  </p>
+</section>
+
+  
 </body>
 </html>
+
 
 
