--- a/index.html
+++ b/index.html
@@ -4,135 +4,212 @@
   <meta charset="UTF-8">
   <title>ON SIGHT｜沖縄中部 出張洗車サービス</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
-    body {
-      font-family: "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+    /* リセット & 基本 */
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Montserrat', sans-serif;
       color: #333;
       line-height: 1.6;
     }
 
     /* ナビゲーション */
     .nav {
-      background: #ffffff;
+      background: #fff;
       position: sticky;
       top: 0;
+      width: 100%;
       z-index: 1000;
-      border-bottom: 1px solid #ddd;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     .nav ul {
       list-style: none;
       display: flex;
       justify-content: center;
-      margin: 0;
-      padding: 10px 0;
+      padding: 15px 0;
     }
     .nav li {
-      margin: 0 15px;
+      margin: 0 20px;
     }
     .nav a {
       text-decoration: none;
       color: #333;
-      font-weight: bold;
+      font-weight: 600;
+      font-size: 16px;
+      position: relative;
+      transition: color 0.3s;
+    }
+    .nav a::after {
+      content: '';
+      position: absolute;
+      width: 0;
+      height: 2px;
+      bottom: -4px;
+      left: 0;
+      background-color: #0da9a7;
+      transition: width 0.3s;
     }
     .nav a:hover {
       color: #0da9a7;
     }
+    .nav a:hover::after {
+      width: 100%;
+    }
 
+    /* ヘッダー */
     header {
-      background: #0da9a7;
+      background: linear-gradient(135deg, #0da9a7, #00bcd4);
       color: #fff;
-      padding: 40px 20px;
+      padding: 120px 20px 60px;
       text-align: center;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+      border-bottom-left-radius: 30px;
+      border-bottom-right-radius: 30px;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 15px;
+    }
+    header p {
+      font-size: 1.2rem;
+      margin-bottom: 10px;
     }
 
-    section {
-      padding: 40px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    h2 {
-      border-left: 5px solid #0da9a7;
-      padding-left: 10px;
-    }
-
+    /* ボタン */
     .btn {
       display: inline-block;
       background: #0da9a7;
       color: #fff;
-      padding: 12px 24px;
+      padding: 14px 28px;
       text-decoration: none;
-      border-radius: 5px;
-      margin-top: 10px;
+      border-radius: 50px;
+      margin-top: 20px;
+      box-shadow: 0 5px 15px rgba(13, 169, 167, 0.3);
+      transition: transform 0.2s, box-shadow 0.3s;
+    }
+    .btn:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 8px 20px rgba(13, 169, 167, 0.4);
     }
 
+    /* セクション */
+    section {
+      padding: 60px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+    section:nth-child(even) {
+      background: #f9f9f9;
+    }
+    h2 {
+      border-left: 5px solid #0da9a7;
+      padding-left: 15px;
+      color: #0da9a7;
+      margin-bottom: 25px;
+      font-size: 1.8rem;
+    }
+    ul li {
+      margin-bottom: 10px;
+      font-size: 1.1rem;
+    }
+
+    /* フッター */
     footer {
       background: #f5f5f5;
       text-align: center;
-      padding: 20px;
+      padding: 25px 20px;
       font-size: 14px;
+      color: #666;
+    }
+
+    /* レスポンシブ */
+    @media (max-width: 600px) {
+      .nav ul {
+        flex-direction: column;
+      }
+      .nav li {
+        margin: 10px 0;
+      }
+      header h1 {
+        font-size: 2.2rem;
+      }
+      h2 {
+        font-size: 1.5rem;
+      }
     }
   </style>
 </head>
 <body>
 
-<!-- ナビゲーション -->
-<nav class="nav">
-  <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#service">Service</a></li>
-    <li><a href="#price">Price</a></li>
-    <li><a href="#reservation">Reservation</a></li>
-    <li><a href="#business">法人向け</a></li>
-  </ul>
-</nav>
+  <!-- ナビゲーション -->
+  <nav class="nav">
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#service">Service</a></li>
+      <li><a href="#price">Price</a></li>
+      <li><a href="#reservation">Reservation</a></li>
+      <li><a href="#business">法人向け</a></li>
+    </ul>
+  </nav>
 
-<!-- ヘッダー -->
-<header id="home">
-  <h1>ON SIGHT</h1>
-  <p>沖縄中部 出張洗車サービス</p>
-  <p>ご自宅・職場でその場洗車。移動ゼロで愛車をリフレッシュ。</p>
-</header>
+  <!-- ヘッダー -->
+  <header id="home">
+    <h1>ON SIGHT</h1>
+    <p>沖縄中部 出張洗車サービス</p>
+    <p>ご自宅・職場でその場洗車。移動ゼロで愛車をリフレッシュ。</p>
+    <a href="#reservation" class="btn">ご予約はこちら</a>
+  </header>
 
-<!-- 各セクション -->
-<section id="service">
-  <h2>サービス内容</h2>
-  <ul>
-    <li>手洗い洗車</li>
-    <li>室内清掃</li>
-    <li>ワックス仕上げ（オプション）</li>
-  </ul>
-</section>
+  <!-- サービス内容 -->
+  <section id="service">
+    <h2>サービス内容</h2>
+    <ul>
+      <li>手洗い洗車</li>
+      <li>室内清掃</li>
+      <li>ワックス仕上げ（オプション）</li>
+    </ul>
+  </section>
 
-<section id="price">
-  <h2>料金目安</h2>
-  <p>
-    軽自動車：3,000円〜<br>
-    普通車：4,000円〜<br>
-    SUV・ミニバン：5,000円〜<br>
-    ※汚れ具合・作業内容により変動します
-  </p>
-</section>
+  <!-- 料金 -->
+  <section id="price">
+    <h2>料金目安</h2>
+    <p>
+      軽自動車：3,000円〜<br>
+      普通車：4,000円〜<br>
+      SUV・ミニバン：5,000円〜<br>
+      ※汚れ具合・作業内容により変動します
+    </p>
+  </section>
 
-<section id="reservation">
-  <h2>ご予約・お問い合わせ</h2>
-  <p>ご予約・お問い合わせは下記よりお願いいたします。</p>
-  <a href="tel:090-0000-0000" class="btn">電話で予約</a><br><br>
-  <a href="#" class="btn">LINEで予約</a>
-</section>
+  <!-- ご予約 -->
+  <section id="reservation">
+    <h2>ご予約・お問い合わせ</h2>
+    <p>ご予約・お問い合わせは下記よりお願いいたします。</p>
+    <a href="tel:090-0000-0000" class="btn">電話で予約</a><br><br>
+    <a href="#" class="btn">LINEで予約</a>
+  </section>
 
-<section id="business">
-  <h2>法人向けサービス</h2>
-  <p>
-    法人様・店舗様向けに、社用車・営業車の定期洗車も承っております。<br>
-    台数・頻度に応じたお見積もりが可能です。
-  </p>
-</section>
+  <!-- 法人向け -->
+  <section id="business">
+    <h2>法人向けサービス</h2>
+    <p>
+      法人様・店舗様向けに、社用車・営業車の定期洗車も承っております。<br>
+      台数・頻度に応じたお見積もりが可能です。
+    </p>
+  </section>
 
-<footer>
-  <p>© 2026 ON SIGHT</p>
-</footer>
+  <!-- フッター -->
+  <footer>
+    <p>© 2026 ON SIGHT</p>
+  </footer>
 
 </body>
 </html>
