--- a/index.html
+++ b/index.html
@@ -2,213 +2,242 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ON SIGHT｜沖縄中部 出張洗車サービス</title>
+  <title>ON SIGHT｜沖縄の移動式ハイエンド洗車</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    /* リセット & 基本 */
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+    :root {
+      --main-blue: #0077b6; /* 沖縄の深い海 */
+      --accent-cyan: #00b4d8;
+      --gold: #d4af37; /* 高級感の演出 */
+      --bg-dark: #1a1a1a;
+      --text-white: #ffffff;
     }
+
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: 'Montserrat', sans-serif;
+      font-family: 'Noto Sans JP', 'Montserrat', sans-serif;
       color: #333;
-      line-height: 1.6;
+      line-height: 1.8;
+      background-color: #f8f9fa;
     }
 
     /* ナビゲーション */
     .nav {
-      background: #fff;
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(10px);
       position: sticky;
       top: 0;
       width: 100%;
       z-index: 1000;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      padding: 10px 0;
     }
     .nav ul {
       list-style: none;
       display: flex;
       justify-content: center;
-      padding: 15px 0;
-    }
-    .nav li {
-      margin: 0 20px;
+      gap: 30px;
     }
     .nav a {
       text-decoration: none;
-      color: #333;
-      font-weight: 600;
-      font-size: 16px;
-      position: relative;
-      transition: color 0.3s;
+      color: var(--main-blue);
+      font-weight: 700;
+      font-size: 14px;
+      text-transform: uppercase;
+      transition: 0.3s;
     }
-    .nav a::after {
-      content: '';
-      position: absolute;
-      width: 0;
-      height: 2px;
-      bottom: -4px;
-      left: 0;
-      background-color: #0da9a7;
-      transition: width 0.3s;
-    }
-    .nav a:hover {
-      color: #0da9a7;
-    }
-    .nav a:hover::after {
-      width: 100%;
-    }
+    .nav a:hover { color: var(--accent-cyan); }
 
-    /* ヘッダー */
+    /* ヒーローセクション */
     header {
-      background: linear-gradient(135deg, #0da9a7, #00bcd4);
-      color: #fff;
-      padding: 120px 20px 60px;
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
+                  url('https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=1600&q=80'); /* 車のイメージ背景 */
+      background-size: cover;
+      background-position: center;
+      color: var(--text-white);
+      height: 85vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
-      border-bottom-left-radius: 30px;
-      border-bottom-right-radius: 30px;
+      padding: 20px;
     }
     header h1 {
-      font-size: 3rem;
-      margin-bottom: 15px;
+      font-size: 4rem;
+      font-weight: 800;
+      letter-spacing: 5px;
+      margin-bottom: 10px;
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     }
     header p {
-      font-size: 1.2rem;
-      margin-bottom: 10px;
+      font-size: 1.4rem;
+      margin-bottom: 30px;
+      font-weight: 400;
     }
 
     /* ボタン */
-    .btn {
-      display: inline-block;
-      background: #0da9a7;
+    .btn-main {
+      background: var(--main-blue);
       color: #fff;
-      padding: 14px 28px;
+      padding: 18px 45px;
       text-decoration: none;
       border-radius: 50px;
-      margin-top: 20px;
-      box-shadow: 0 5px 15px rgba(13, 169, 167, 0.3);
-      transition: transform 0.2s, box-shadow 0.3s;
-    }
-    .btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 20px rgba(13, 169, 167, 0.4);
-    }
-
-    /* セクション */
-    section {
-      padding: 60px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    section:nth-child(even) {
-      background: #f9f9f9;
-    }
-    h2 {
-      border-left: 5px solid #0da9a7;
-      padding-left: 15px;
-      color: #0da9a7;
-      margin-bottom: 25px;
-      font-size: 1.8rem;
-    }
-    ul li {
-      margin-bottom: 10px;
+      font-weight: bold;
       font-size: 1.1rem;
+      transition: all 0.4s;
+      box-shadow: 0 10px 20px rgba(0,119,182,0.3);
+    }
+    .btn-main:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 30px rgba(0,119,182,0.5);
+      background: var(--accent-cyan);
     }
 
-    /* フッター */
-    footer {
-      background: #f5f5f5;
+    /* セクション共通 */
+    section { padding: 80px 20px; max-width: 1100px; margin: auto; }
+    h2 {
       text-align: center;
-      padding: 25px 20px;
-      font-size: 14px;
-      color: #666;
+      font-size: 2.2rem;
+      margin-bottom: 50px;
+      position: relative;
+      padding-bottom: 15px;
+    }
+    h2::after {
+      content: '';
+      position: absolute;
+      width: 60px;
+      height: 4px;
+      background: var(--main-blue);
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
     }
 
-    /* レスポンシブ */
-    @media (max-width: 600px) {
-      .nav ul {
-        flex-direction: column;
-      }
-      .nav li {
-        margin: 10px 0;
-      }
-      header h1 {
-        font-size: 2.2rem;
-      }
-      h2 {
-        font-size: 1.5rem;
-      }
+    /* サービスカード */
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 30px;
+    }
+    .card {
+      background: white;
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+      text-align: center;
+      transition: 0.3s;
+    }
+    .card:hover { transform: translateY(-10px); }
+    .card h3 { color: var(--main-blue); margin-bottom: 15px; }
+
+    /* 料金表 */
+    .price-box {
+      background: var(--bg-dark);
+      color: white;
+      border-radius: 30px;
+      padding: 50px;
+      text-align: center;
+    }
+    .price-list {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .price-item { flex: 1; min-width: 200px; }
+    .price-item span { font-size: 2.5rem; font-weight: 800; color: var(--accent-cyan); }
+
+    /* 予約セクション */
+    .reservation {
+      background: #e9ecef;
+      text-align: center;
+      border-radius: 30px;
+    }
+    .line-btn { background: #06c755; margin-top: 20px; }
+
+    footer {
+      background: #111;
+      color: #777;
+      text-align: center;
+      padding: 40px;
+    }
+
+    @media (max-width: 768px) {
+      header h1 { font-size: 2.5rem; }
+      .nav ul { gap: 10px; font-size: 12px; }
     }
   </style>
 </head>
 <body>
 
-  <!-- ナビゲーション -->
   <nav class="nav">
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#service">Service</a></li>
       <li><a href="#price">Price</a></li>
-      <li><a href="#reservation">Reservation</a></li>
-      <li><a href="#business">法人向け</a></li>
+      <li><a href="#reservation">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- ヘッダー -->
   <header id="home">
     <h1>ON SIGHT</h1>
-    <p>沖縄中部 出張洗車サービス</p>
-    <p>ご自宅・職場でその場洗車。移動ゼロで愛車をリフレッシュ。</p>
-    <a href="#reservation" class="btn">ご予約はこちら</a>
+    <p>沖縄の景色に、最高の輝きを。</p>
+    <a href="#reservation" class="btn-main">今すぐ予約する</a>
   </header>
 
-  <!-- サービス内容 -->
   <section id="service">
-    <h2>サービス内容</h2>
-    <ul>
-      <li>手洗い洗車</li>
-      <li>室内清掃</li>
-      <li>ワックス仕上げ（オプション）</li>
-    </ul>
+    <h2>PREMIUM SERVICES</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Nano Hand Wash</h3>
+        <p>最高級シャンプーを使用した、傷をつけない極上の手洗い洗車。</p>
+      </div>
+      <div class="card">
+        <h3>Interior Detailing</h3>
+        <p>掃除機掛けから内装除菌まで。ホテルのような清潔感を車内に。</p>
+      </div>
+      <div class="card">
+        <h3>Ultra Wax</h3>
+        <p>沖縄の強い紫外線から愛車を守る、高耐久撥水コーティング。</p>
+      </div>
+    </div>
   </section>
 
-  <!-- 料金 -->
   <section id="price">
-    <h2>料金目安</h2>
-    <p>
-      軽自動車：3,000円〜<br>
-      普通車：4,000円〜<br>
-      SUV・ミニバン：5,000円〜<br>
-      ※汚れ具合・作業内容により変動します
-    </p>
+    <div class="price-box">
+      <h2>PRICING</h2>
+      <div class="price-list">
+        <div class="price-item">
+          <p>Compact</p>
+          <span>¥4,000〜</span>
+        </div>
+        <div class="price-item">
+          <p>Standard</p>
+          <span>¥5,500〜</span>
+        </div>
+        <div class="price-item">
+          <p>SUV / Luxury</p>
+          <span>¥7,000〜</span>
+        </div>
+      </div>
+      <p style="margin-top:30px; opacity: 0.7;">※出張エリア：沖縄県中部（その他エリアはご相談ください）</p>
+    </div>
   </section>
 
-  <!-- ご予約 -->
-  <section id="reservation">
-    <h2>ご予約・お問い合わせ</h2>
-    <p>ご予約・お問い合わせは下記よりお願いいたします。</p>
-    <a href="tel:090-0000-0000" class="btn">電話で予約</a><br><br>
-    <a href="#" class="btn">LINEで予約</a>
+  <section id="reservation" class="reservation">
+    <h2>RESERVATION</h2>
+    <p>公式LINEまたはお電話にて、24時間受付中。</p>
+    <div style="margin-top: 30px;">
+      <a href="tel:090-0000-0000" class="btn-main">お電話：090-0000-0000</a><br><br>
+      <a href="#" class="btn-main line-btn">LINEで今すぐ予約</a>
+    </div>
   </section>
 
-  <!-- 法人向け -->
-  <section id="business">
-    <h2>法人向けサービス</h2>
-    <p>
-      法人様・店舗様向けに、社用車・営業車の定期洗車も承っております。<br>
-      台数・頻度に応じたお見積もりが可能です。
-    </p>
-  </section>
-
-  <!-- フッター -->
   <footer>
-    <p>© 2026 ON SIGHT</p>
+    <p>© 2026 ON SIGHT - Premium Mobile Car Wash Okinawa</p>
   </footer>
 
 </body>
