--- a/index.html
+++ b/index.html
@@ -2,244 +2,161 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>ON SIGHT｜沖縄の移動式ハイエンド洗車</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
+  <title>ON SIGHT｜沖縄中部 出張洗車＆格安車検点検</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Noto+Sans+JP:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --main-blue: #0077b6; /* 沖縄の深い海 */
-      --accent-cyan: #00b4d8;
-      --gold: #d4af37; /* 高級感の演出 */
-      --bg-dark: #1a1a1a;
-      --text-white: #ffffff;
+      --main-blue: #0077b6;
+      --accent-red: #e63946; /* 車検・最安値の強調用 */
+      --dark: #1a1a1a;
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Noto Sans JP', 'Montserrat', sans-serif;
-      color: #333;
-      line-height: 1.8;
-      background-color: #f8f9fa;
-    }
+    body { font-family: 'Noto Sans JP', sans-serif; line-height: 1.7; color: #333; }
 
-    /* ナビゲーション */
-    .nav {
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
+    /* ナビ */
+    nav {
+      background: rgba(255,255,255,0.95);
+      padding: 15px 5%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
       position: sticky;
       top: 0;
-      width: 100%;
       z-index: 1000;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-      padding: 10px 0;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
-    .nav ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 30px;
-    }
-    .nav a {
-      text-decoration: none;
-      color: var(--main-blue);
-      font-weight: 700;
-      font-size: 14px;
-      text-transform: uppercase;
-      transition: 0.3s;
-    }
-    .nav a:hover { color: var(--accent-cyan); }
+    .logo { font-family: 'Montserrat'; font-weight: 800; font-size: 1.4rem; color: var(--main-blue); }
 
-    /* ヒーローセクション */
-    header {
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), 
-                  url('https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=1600&q=80'); /* 車のイメージ背景 */
+    /* ヒーローエリア */
+    .hero {
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1605152276897-4f618f831968?q=80&w=2000');
       background-size: cover;
       background-position: center;
-      color: var(--text-white);
-      height: 85vh;
+      height: 90vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      text-align: center;
-      padding: 20px;
-    }
-    header h1 {
-      font-size: 4rem;
-      font-weight: 800;
-      letter-spacing: 5px;
-      margin-bottom: 10px;
-      text-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-    }
-    header p {
-      font-size: 1.4rem;
-      margin-bottom: 30px;
-      font-weight: 400;
-    }
-
-    /* ボタン */
-    .btn-main {
-      background: var(--main-blue);
       color: #fff;
-      padding: 18px 45px;
-      text-decoration: none;
-      border-radius: 50px;
-      font-weight: bold;
-      font-size: 1.1rem;
-      transition: all 0.4s;
-      box-shadow: 0 10px 20px rgba(0,119,182,0.3);
+      text-align: center;
+      padding: 0 20px;
     }
-    .btn-main:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 30px rgba(0,119,182,0.5);
-      background: var(--accent-cyan);
-    }
+    .hero h1 { font-size: 2.8rem; margin-bottom: 15px; text-shadow: 2px 2px 10px rgba(0,0,0,0.5); }
+    .hero p { font-size: 1.1rem; margin-bottom: 30px; }
 
     /* セクション共通 */
-    section { padding: 80px 20px; max-width: 1100px; margin: auto; }
-    h2 {
-      text-align: center;
-      font-size: 2.2rem;
-      margin-bottom: 50px;
-      position: relative;
-      padding-bottom: 15px;
-    }
-    h2::after {
-      content: '';
-      position: absolute;
-      width: 60px;
-      height: 4px;
-      background: var(--main-blue);
+    section { padding: 80px 20px; max-width: 1000px; margin: auto; }
+    h2 { text-align: center; font-size: 2rem; margin-bottom: 40px; color: var(--main-blue); }
+    h2 span { font-size: 1rem; display: block; color: #888; margin-bottom: 5px; }
+
+    /* 強みセクション */
+    .features { background: #f8f9fa; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; border-radius: 20px; }
+    .feature-card { background: #fff; padding: 30px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); text-align: center; }
+    .feature-card h3 { margin-bottom: 15px; color: var(--main-blue); }
+    .highlight-box { border: 2px solid var(--accent-red); background: #fff5f5; }
+
+    /* 料金テーブル */
+    .price-table { width: 100%; border-collapse: collapse; margin: 30px 0; }
+    .price-table th, .price-table td { border: 1px solid #ddd; padding: 15px; text-align: left; }
+    .price-table th { background: #eee; }
+    .price-val { font-weight: bold; color: var(--accent-red); font-size: 1.2rem; }
+
+    /* 固定予約ボタン（スマホ用） */
+    .fixed-footer {
+      position: fixed;
       bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-    }
-
-    /* サービスカード */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 30px;
-    }
-    .card {
-      background: white;
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.05);
-      text-align: center;
-      transition: 0.3s;
-    }
-    .card:hover { transform: translateY(-10px); }
-    .card h3 { color: var(--main-blue); margin-bottom: 15px; }
-
-    /* 料金表 */
-    .price-box {
-      background: var(--bg-dark);
-      color: white;
-      border-radius: 30px;
-      padding: 50px;
-      text-align: center;
-    }
-    .price-list {
+      width: 100%;
+      background: #fff;
       display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-top: 30px;
+      padding: 10px;
+      gap: 10px;
+      box-shadow: 0 -2px 10px rgba(0,0,0,0.1);
+      z-index: 9999;
     }
-    .price-item { flex: 1; min-width: 200px; }
-    .price-item span { font-size: 2.5rem; font-weight: 800; color: var(--accent-cyan); }
-
-    /* 予約セクション */
-    .reservation {
-      background: #e9ecef;
+    .btn {
+      flex: 1;
       text-align: center;
-      border-radius: 30px;
+      padding: 15px;
+      border-radius: 10px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #fff;
     }
-    .line-btn { background: #06c755; margin-top: 20px; }
+    .btn-tel { background: var(--main-blue); }
+    .btn-line { background: #06c755; }
 
-    footer {
-      background: #111;
-      color: #777;
-      text-align: center;
-      padding: 40px;
-    }
+    footer { background: var(--dark); color: #777; text-align: center; padding: 40px 20px 100px; }
 
     @media (max-width: 768px) {
-      header h1 { font-size: 2.5rem; }
-      .nav ul { gap: 10px; font-size: 12px; }
+      .hero h1 { font-size: 2rem; }
     }
   </style>
 </head>
 <body>
 
-  <nav class="nav">
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#service">Service</a></li>
-      <li><a href="#price">Price</a></li>
-      <li><a href="#reservation">Contact</a></li>
-    </ul>
+  <nav>
+    <div class="logo">ON SIGHT</div>
+    <div style="font-size: 0.8rem; font-weight: bold;">沖縄中部 出張洗車</div>
   </nav>
 
-  <header id="home">
-    <h1>ON SIGHT</h1>
-    <p>沖縄の景色に、最高の輝きを。</p>
-    <a href="#reservation" class="btn-main">今すぐ予約する</a>
-  </header>
+  <section class="hero">
+    <h1>プロの技術を、<br>あなたの駐車場で。</h1>
+    <p>整備士資格を持つスタッフが伺う、安心の移動式洗車サービス</p>
+    <a href="tel:08064872937" class="btn btn-tel" style="flex:none; padding: 15px 40px;">今すぐ電話で予約</a>
+  </section>
 
   <section id="service">
-    <h2>PREMIUM SERVICES</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>Nano Hand Wash</h3>
-        <p>最高級シャンプーを使用した、傷をつけない極上の手洗い洗車。</p>
+    <h2><span>SERVICE</span>ON SIGHTの強み</h2>
+    <div class="features">
+      <div class="feature-card">
+        <h3>純水手洗い洗車</h3>
+        <p>沖縄の強い日差しでもシミにならない「純水」を使用。愛車を優しく、ピカピカに洗い上げます。</p>
       </div>
-      <div class="card">
-        <h3>Interior Detailing</h3>
-        <p>掃除機掛けから内装除菌まで。ホテルのような清潔感を車内に。</p>
+      <div class="feature-card highlight-box">
+        <h3>国家整備士の点検</h3>
+        <p><strong>整備資格保持者が在籍！</strong>洗車と同時に、エンジンルームや足回りの異常をプロの目でチェックします。</p>
       </div>
-      <div class="card">
-        <h3>Ultra Wax</h3>
-        <p>沖縄の強い紫外線から愛車を守る、高耐久撥水コーティング。</p>
+      <div class="feature-card">
+        <h3>車検・点検が最安値</h3>
+        <p>店舗を持たないからこそできるコストカット。地域最安値クラスで車検の代行・点検も承ります。</p>
       </div>
     </div>
   </section>
 
   <section id="price">
-    <div class="price-box">
-      <h2>PRICING</h2>
-      <div class="price-list">
-        <div class="price-item">
-          <p>Compact</p>
-          <span>¥4,000〜</span>
-        </div>
-        <div class="price-item">
-          <p>Standard</p>
-          <span>¥5,500〜</span>
-        </div>
-        <div class="price-item">
-          <p>SUV / Luxury</p>
-          <span>¥7,000〜</span>
-        </div>
-      </div>
-      <p style="margin-top:30px; opacity: 0.7;">※出張エリア：沖縄県中部（その他エリアはご相談ください）</p>
+    <h2><span>PRICE</span>料金表（税込）</h2>
+    <table class="price-table">
+      <tr><th>サイズ</th><th>参考車種</th><th>料金</th></tr>
+      <tr><td>軽自動車</td><td>N-BOX / デイズ / タント</td><td class="price-val">¥4,400〜</td></tr>
+      <tr><td>普通車</td><td>プリウス / カローラ / ノート</td><td class="price-val">¥5,500〜</td></tr>
+      <tr><td>大型・SUV</td><td>アルファード / プラド</td><td class="price-val">¥7,700〜</td></tr>
+    </table>
+    <div style="background: #f0f7ff; padding: 20px; border-radius: 10px;">
+      <p><strong>💡 車検・点検について</strong><br>
+      お車の状態に合わせて個別にお見積もりいたします。「次の車検、安く済ませたい」というご相談だけでも大歓迎です！</p>
     </div>
   </section>
 
-  <section id="reservation" class="reservation">
-    <h2>RESERVATION</h2>
-    <p>公式LINEまたはお電話にて、24時間受付中。</p>
-    <div style="margin-top: 30px;">
-      <a href="tel:080-6487-2937" class="btn-main">お電話：080-6487-2937</a><br><br>
-      <a href="#" class="btn-main line-btn">LINEで今すぐ予約</a>
-    </div>
+  <section id="contact" style="text-align: center;">
+    <h2><span>CONTACT</span>ご予約・お問い合わせ</h2>
+    <p>年中無休・沖縄中部エリアを中心に出張いたします。</p>
+    <p style="font-size: 1.5rem; font-weight: 800; margin: 20px 0;">
+      <a href="tel:08064872937" style="color: var(--main-blue); text-decoration: none;">📞 080-6487-2937</a>
+    </p>
+    <p>「Webサイトを見た」とお伝えいただくとスムーズです。</p>
   </section>
 
   <footer>
-    <p>© 2026 ON SIGHT - Premium Mobile Car Wash Okinawa</p>
+    <p>© 2026 ON SIGHT 沖縄中部<br>
+    整備士資格保持者在籍｜出張洗車・点検・車検代行</p>
   </footer>
+
+  <div class="fixed-footer">
+    <a href="tel:08064872937" class="btn btn-tel">電話で予約</a>
+    <a href="#" class="btn btn-line">LINEで相談</a>
+  </div>
 
 </body>
 </html>
-
