--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     /* ヒーローエリア */
     .hero {
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1552930294-6b595f4c2974?q=80&w=2000');
+      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=1600&q=80');
       background-size: cover;
       background-position: center;
       height: 90vh;
@@ -160,5 +160,6 @@
 
 </body>
 </html>
+
 
 
