--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     .hero {
       height: 90vh;
       background: linear-gradient(rgba(10,14,20,0.7), rgba(10,14,20,0.7)), 
-                  url('https://images.unsplash.com/photo-1605152276897-4f618f831968?q=80&w=2000');
+                  url('https://images.unsplash.com/photo-1520340356584-f9917d1eea6f?auto=format&fit=crop&w=1600&q=80');
       background-size: cover;
       background-position: center;
       display: flex;
@@ -208,3 +208,4 @@
 
 </body>
 </html>
+
